Closed Bug 457545 Opened 17 years ago Closed 17 years ago

nsParseMailbox.cpp:1813: warning: unused variable ‘numFolders’

Categories

(MailNews Core :: Backend, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: tuukka.tolvanen, Assigned: tuukka.tolvanen)

References

()

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch1 (obsolete) — Splinter Review
Assignee: nobody → tuukka.tolvanen
Status: NEW → ASSIGNED
Attachment #340804 - Flags: superreview?(neil)
Attachment #340804 - Flags: review?(neil)
Attachment #340804 - Flags: superreview?(neil)
Attachment #340804 - Flags: superreview+
Attachment #340804 - Flags: review?(neil)
Attachment #340804 - Flags: review+
Attachment #340804 - Attachment is obsolete: true
Attachment #340806 - Flags: superreview?(neil)
Attachment #340806 - Flags: review?(neil)
Comment on attachment 340806 [details] [diff] [review] patch2 nsRssIncomingServer too [Checkin: Comment 4] Thanks for catching these :-)
Attachment #340806 - Flags: superreview?(neil)
Attachment #340806 - Flags: superreview+
Attachment #340806 - Flags: review?(neil)
Attachment #340806 - Flags: review+
Keywords: checkin-needed
Attachment #340806 - Attachment description: patch2 nsRssIncomingServer too → patch2 nsRssIncomingServer too [Checkin: Comment 4]
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: