Bug 457545 - nsParseMailbox.cpp:1813: warning: unused variable ‘numFolders’; v2; r+sr=neil